# CooptUI

./: .gitignore  .luacheckrc  Build-Smart.ps1  CHANGELOG.md  DEPLOY.md  README.md  archive_backups.ps1  default_config_manifest.json  release_manifest.json  status_audit.md
Macros/: loot.mac  sell.mac
config/: MQ2CustomBinds.txt  ingame.cfg  zoned.cfg
config_templates/: CONFIG_TEMPLATES_DEFAULTS.md
docs/: ARCHITECTURE.md  CONFIGURATION.md  CRITICAL_FIX_SELL_CRASH.md  CoopUI_Model_Selection_Guide.md  DEVELOPER.md  EPIC_PROTECTION_DISABLED.md  FIXES_2026_01_31_SECTIONS_2.2_AND_2.3.md  FIX_ITEMUI_STAYS_OPEN.md  GITHUB_HTTPS_SETUP.md  INSTALL.md  MQ2_BEST_PRACTICES.md  MQ2_STATUS_CHECK_AND_PLAN.md  OPTIMIZATION_ROADMAP.md  PRIORITY_1_4_COMPLETION.md  QUICK_REFERENCE_NEW_FEATURES.md  RELEASE_AND_DEPLOYMENT.md  SELL_CACHE_DESIGN.md  (+3 more)
plugin/MQ2CoOptUI/: CMakeLists.txt  MQ2CoOptUI.cpp  MQ2CoOptUI.def  README.md
plugin/MQ2CoOptUI/capabilities/: cursor.cpp  cursor.h  ini.cpp  ini.h  ipc.cpp  ipc.h  items.cpp  items.h  loot.cpp  loot.h  sound.cpp  sound.h  window.cpp  window.h
plugin/MQ2CoOptUI/core/: CacheManager.cpp  CacheManager.h  Config.cpp  Config.h  ItemData.h  ItemDataPopulate.cpp  ItemDataPopulate.h  ItemDataToTable.cpp  ItemDataToTable.h  Logger.cpp  Logger.h
plugin/MQ2CoOptUI/rules/: RulesEngine.cpp  RulesEngine.h
plugin/MQ2CoOptUI/scanners/: BankScanner.cpp  BankScanner.h  InventoryScanner.cpp  InventoryScanner.h  LootScanner.cpp  LootScanner.h  SellScanner.cpp  SellScanner.h
plugin/MQ2CoOptUI/storage/: SellCacheWriter.cpp  SellCacheWriter.h
(+325 files in other folders)
